Fixed inexistent index on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -139,7 +139,7 @@ main {
 	margin-left: auto;
 	margin-right: auto;
 	width: 90%;
-	max-width: 200px;
+	max-width: 180px;
 	padding: 2%;
 	display: block;
 }
